src/styles/globals.css
@font-face {
  font-family: "AvenirPro-regular";
  src: url("../assets/fonts/Avenir_Next_Pro/AvenirNextLTPro-Regular.otf")
    format("opentype");
}

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

html,
body {
  height: 100%;
  /* max-width: 100vw; */
  /* overflow-x: hidden; */
}

a {
  color: inherit;
  text-decoration: none;
}

#__next {
  height: 100%;
}

.height-100 {
  height: 100%;
  overflow: hidden;
}

.iframe-cont {
  width: 100%;
  height: 100%;
  display: block;
  overflow: hidden;
}

@media (prefers-color-scheme: dark) {
  html {
    color-scheme: dark;
  }
}

.react-tel-input .form-control {
  width: 100% !important;
  background: #242426 !important;
  transition: none !important;
  height: 40px !important;
  border: none !important;
  color: white !important;
  font-family: "AvenirPro-regular";
}
.react-tel-input .form-control::placeholder {
  font-family: "AvenirPro-regular";
  color: #8e8e93 !important;
  font-size: 14px !important;
  font-weight: 400 !important;
}

.react-tel-input .flag-dropdown {
  border: none !important;
  background: #242426 !important;
}

.react-tel-input .flag-dropdown.open .selected-flag {
  background: #242426 !important;
}

.form-control:focus {
  box-shadow: none !important;
}

.react-tel-input .country-list {
  background-color: #242426 !important;
  margin-bottom: 20px !important;
  font-family: "AvenirPro-regular" !important;
}

.react-tel-input .country-list .country .dial-code {
  color: #8e8e93 !important;
}

.react-tel-input .country-list .country.highlight {
  background-color: rgb(58, 58, 58) !important;
}

.react-tel-input .country-list .country:hover {
  background-color: rgb(58, 58, 58) !important;
}

.react-tel-input .selected-flag:hover {
  background-color: rgb(58, 58, 58) !important;
}

.react-tel-input .country-list{
  max-height: 150px !important;
}

.react-tel-input .country-list .divider{
  margin-bottom: 0 !important;
  padding-bottom: 0 !important;
  border-bottom: none !important;
}

.spinner-border {
  --bs-spinner-border-width: 0.15em !important;
}

